--- a/desk.css
+++ b/desk.css
@@ -1243,6 +1243,7 @@ section {
   padding: 10px;
   cursor: pointer;
   border: none;
+  font-size: clamp(0.45rem, 1vw, 0.9rem);
 
   border-radius: 4px;
   font-weight: 600;
