--- a/desk.css
+++ b/desk.css
@@ -1389,20 +1389,23 @@ section {
 }
 
 #terapia-financiera .tf-si,
-#terapia-financiera .tf-sd,
-#terapia-financiera .tf-ii,
 #terapia-financiera .tf-id {
   padding: 1.5rem;
 }
 
+#terapia-financiera .tf-sd,
+#terapia-financiera .tf-ii {
+  padding: 0;
+}
+
 #terapia-financiera .tf-sd {
-  background-color: var(--azul-profundo);
-  color: #fff;
+  background-color: #8fb0c4;
+  color: var(--azul-medianoche);
 }
 
 #terapia-financiera .tf-ii {
-  background-color: #ff6b35;
-  color: #fff;
+  background-color: #b5cad8;
+  color: var(--azul-medianoche);
 }
 #terapia-financiera .section-title {
   font-size: 2rem;
