--- a/desk.css
+++ b/desk.css
@@ -1386,9 +1386,22 @@ section {
   max-width: 1100px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto;
+  grid-template-columns: 1fr;
+  row-gap: 2rem;
+}
+
+#terapia-financiera .tf-row1,
+#terapia-financiera .tf-row2 {
+  display: grid;
   column-gap: 2rem;
+}
+
+#terapia-financiera .tf-row1 {
+  grid-template-columns: 65% 35%;
+}
+
+#terapia-financiera .tf-row2 {
+  grid-template-columns: 35% 65%;
 }
 
 #terapia-financiera .tf-si,
